--- a/SME_UnB/report/templates/graphics/report.html
+++ b/SME_UnB/report/templates/graphics/report.html
@@ -24,7 +24,33 @@
     <div class="form-group">
       {% load staticfiles %}
       <img src="{% static 'currentGraphic.png' %}"/>
+      <table class ="table table-bordered">
+          <tr>
+              <th>Phase</th>
+              <th>Max. value</th>
+              <th>Min. Value</th>
+              <th>Average Value</th>
+          </tr>
+          <tr>
+              <td>Phase 1</td>
+              <td>{{Current.max.0}}</td>
+              <td>{{Current.min.0}}</td>
+              <td>{{Current.average.0}}</td>
+          </tr>
+          <tr>
+              <td>Phase 2</td>
+              <td>{{Current.max.1}}</td>
+              <td>{{Current.min.1}}</td>
+              <td>{{Current.average.1}}</td>
+          </tr>
+          <tr>
+              <td>Phase 3</td>
+              <td>{{Current.max.2}}</td>
+              <td>{{Current.min.2}}</td>
+              <td>{{Current.average.2}}</td>
+          </tr>
 
+      </table class ="table table-bordered">
     </div>
   </div>
 </div>
@@ -36,6 +62,33 @@
     <div class="form-group">
       {% load staticfiles %}
       <img src="{% static 'voltageGraphic.png' %}"/>
+      <table class ="table table-bordered">
+          <tr>
+              <th>Phase</th>
+              <th>Max. value</th>
+              <th>Min. Value</th>
+              <th>Average Value</th>
+          </tr>
+          <tr>
+              <td>Phase 1</td>
+              <td>{{voltage.max.0}}</td>
+              <td>{{voltage.min.0}}</td>
+              <td>{{voltage.average.0}}</td>
+          </tr>
+          <tr>
+              <td>Phase 2</td>
+              <td>{{voltage.max.1}}</td>
+              <td>{{voltage.min.1}}</td>
+              <td>{{voltage.average.1}}</td>
+          </tr>
+          <tr>
+              <td>Phase 3</td>
+              <td>{{voltage.max.2}}</td>
+              <td>{{voltage.min.2}}</td>
+              <td>{{voltage.average.2}}</td>
+          </tr>
+
+      </table class ="table table-bordered">
 
     </div>
   </div>
@@ -47,6 +100,33 @@
     <div class="form-group">
       {% load staticfiles %}
       <img src="{% static 'activePowerGraphic.png' %}"/>
+      <table class ="table table-bordered">
+          <tr>
+              <th>Phase</th>
+              <th>Max. value</th>
+              <th>Min. Value</th>
+              <th>Average Value</th>
+          </tr>
+          <tr>
+              <td>Phase 1</td>
+              <td>{{activePower.max.0}}</td>
+              <td>{{activePower.min.0}}</td>
+              <td>{{activePower.average.0}}</td>
+          </tr>
+          <tr>
+              <td>Phase 2</td>
+              <td>{{activePower.max.1}}</td>
+              <td>{{activePower.min.1}}</td>
+              <td>{{activePower.average.1}}</td>
+          </tr>
+          <tr>
+              <td>Phase 3</td>
+              <td>{{activePower.max.2}}</td>
+              <td>{{activePower.min.2}}</td>
+              <td>{{activePower.average.2}}</td>
+          </tr>
+
+      </table class ="table table-bordered">
 
     </div>
   </div>
@@ -58,7 +138,33 @@
     <div class="form-group">
       {% load staticfiles %}
       <img src="{% static 'reactivePowerGraphic.png' %}"/>
+      <table class ="table table-bordered">
+          <tr>
+              <th>Phase</th>
+              <th>Max. value</th>
+              <th>Min. Value</th>
+              <th>Average Value</th>
+          </tr>
+          <tr>
+              <td>Phase 1</td>
+              <td>{{reactivePower.max.0}}</td>
+              <td>{{reactivePower.min.0}}</td>
+              <td>{{reactivePower.average.0}}</td>
+          </tr>
+          <tr>
+              <td>Phase 2</td>
+              <td>{{reactivePower.max.1}}</td>
+              <td>{{reactivePower.min.1}}</td>
+              <td>{{reactivePower.average.1}}</td>
+          </tr>
+          <tr>
+              <td>Phase 3</td>
+              <td>{{reactivePower.max.2}}</td>
+              <td>{{reactivePower.min.2}}</td>
+              <td>{{reactivePower.average.2}}</td>
+          </tr>
 
+      </table class ="table table-bordered">
     </div>
   </div>
 </div>
@@ -69,6 +175,33 @@
     <div class="form-group">
       {% load staticfiles %}
       <img src="{% static 'apparentPowerGraphic.png' %}"/>
+      <table class ="table table-bordered">
+          <tr>
+              <th>Phase</th>
+              <th>Max. value</th>
+              <th>Min. Value</th>
+              <th>Average Value</th>
+          </tr>
+          <tr>
+              <td>Phase 1</td>
+              <td>{{apparentPower.max.0}}</td>
+              <td>{{apparentPower.min.0}}</td>
+              <td>{{apparentPower.average.0}}</td>
+          </tr>
+          <tr>
+              <td>Phase 2</td>
+              <td>{{apparentPower.max.1}}</td>
+              <td>{{apparentPower.min.1}}</td>
+              <td>{{apparentPower.average.1}}</td>
+          </tr>
+          <tr>
+              <td>Phase 3</td>
+              <td>{{apparentPower.max.2}}</td>
+              <td>{{apparentPower.min.2}}</td>
+              <td>{{apparentPower.average.2}}</td>
+          </tr>
+
+      </table class ="table table-bordered">
 
     </div>
   </div>
