Change Transductor type to PolymorphicModel, field internet_protocol to transport_protocol, fix migrations and tests

--- a/src/transductor/templates/transductor/model_index.html
+++ b/src/transductor/templates/transductor/model_index.html
@@ -17,7 +17,7 @@
         <tbody>
           <tr>
             <td>{{model.name}}</td>
-            <td>{{model.internet_protocol}}</td>
+            <td>{{model.transport_protocol}}</td>
             <td>{{model.serial_protocol}}</td>
           </tr>
         </tbody>
