fixing break lines in view and template(html) logging
Signed-off-by: joaosaliba <joao_salibaa@hotmail.com>
Signed-off-by: laercios <laerciossjr@gmail.com>

--- a/SME_UnB/users/templates/users/logging_list.html
+++ b/SME_UnB/users/templates/users/logging_list.html
@@ -16,7 +16,7 @@
         <table class ="table table-bordered">
 
           <tr>
-            <td>{{logging}}</td>            
+            <td>{{logging|linebreaks}}</td>            
           </tr>
 
 
