Added confirm messages

--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -62,7 +62,7 @@
                   <input type="checkbox" id="permissions_checkbox3" name="delete_users"> {% trans "Delete Users" %}
                 </label>
               </div>
-              <button type="submit" class="btn btn-success btn-lg btn-block" >{% trans "Register" %}</button>
+              <button type="submit" class="btn btn-success btn-lg btn-block" onclick="return confirm('Voce tem certeza ?')" >{% trans "Register" %}</button>
 
             </div>
           </form>
