--- a/SME_UnB/users/templates/users/delete_user.html
+++ b/SME_UnB/users/templates/users/delete_user.html
@@ -19,7 +19,7 @@
         {% csrf_token %}
 
       </div>
-      <button type="submit" class="btn btn-danger" href="{% url 'users:list_user_delete' %}" style="width: 250px; height: 50px">{% trans "Delete" %}</button>
+      <button type="submit" onclick="return confirm('Voce tem certeza ?')" class="btn btn-danger" href="{% url 'users:list_user_delete' %}" style="width: 250px; height: 50px">{% trans "Delete" %}</button>
       <h1> </h1>
       <p><a class="btn btn-primary" href="{% url 'users:list_user_delete' %}" role="button" style="width: 250px; height: 50px">{% trans "Cancel" %}</a></p>
     </form>
