--- a/SME_UnB/users/templates/users/self_edit.html
+++ b/SME_UnB/users/templates/users/self_edit.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %}
-<title>{% trans "Edit User" %}</title>
+<title>{% trans "Edit Profile" %}</title>
 {% endblock %}
 
 {% block dashboard_content %}
@@ -21,20 +21,27 @@
             <p2>{{falha}}</p2>
             {% csrf_token %}
             <div class="form-group">
-              <label>Nome :</label>
+              <p1>{% trans "Name:" %}</p1>
               <input type="text" name= "first_name" value="{{user.first_name}}" class="form-control">
             </div>
             <div class="form-group">
-              <label>Sobrenome :</label>
+              <p1>{% trans "Last Name:" %}</p1>
               <input type="text" name= "last_name" value="{{user.last_name}}" class="form-control">
             </div>
             <div class="form-group">
-              <label>Email :</label>
+              <p1>{% trans "Password:" %}</p1>
+              <input type="password" name ="password" placeholder="Password" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" name ="confirmPassword" placeholder="confirm password" class="form-control">
+            </div>
+            <div class="form-group">
+              <p1>{% trans "Email:" %}</p1>
               <input type="text" name= "email" value="{{user.email}}" class="form-control">
             </div>
             <input type="hidden" name="original_email" value="{{user.email}}">
             <button type="submit" class="btn btn-success" >{% trans "Edit" %}</button>
-            <a class="btn btn-primary" href="{% url 'users:list_user_edit' %}" role="button">{% trans "Cancel" %}</a>
+            <a class="btn btn-primary" href="{% url 'users:dashboard' %}" role="button">{% trans "Cancel" %}</a>
           </form>
         </div>
       </div>
