--- a/SME_UnB/users/templates/users/forgot_password.html
+++ b/SME_UnB/users/templates/users/forgot_password.html
@@ -9,19 +9,24 @@
 <title>{% trans "SME - Esqueci a senha" %}</title>
 {% endblock %}
 {% block body %}
+
 <!-- Modal -->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Modal header</h3>
+<div class="modal fade" id="confirmMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Esqueci a senha</h4>
+      </div>
+      <div class="modal-body">
+        <span id='message'></span>
+        <p id='validate'></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
     </div>
-    <div class="modal-body">
-        <p>One fine body…</p>
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
-    </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="{% static 'users/js/forgot.js' %}"></script>
