--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -12,7 +12,7 @@
       <li><a href="{% url 'transductor:index'%}">{% trans "Transductors" %}</a></li>
       {% if request.user.is_staff %}
       <li><a href="{% url 'users:register' %}">{% trans "Register" %}</a></li>
-      {% endif %}      
+      {% endif %}
       {%if perms.users.can_edit_user%}
       <li><a href="{% url 'users:list_user_edit' %}">{% trans "Edit Users" %}</a></li>
       {%endif%}
@@ -20,6 +20,7 @@
 	    {%if perms.users.can_delete_user%}
       <li><a href="{% url 'users:list_user_delete' %}">{% trans "Delete Users" %}</a></li>
       {%endif%}
+      <li><a href="{% url 'report:invoice' %}">{% trans "Invoice" %}</a></li>
       {% endblock %}
     </ul>
   </div>
