Fixed Admin registration

--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -34,10 +34,10 @@
             <p1>{% trans "User type:" %}</p1>
             <div class="form-group">
               <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> {% trans "Commun User" %}
+                <input type="radio" name="user_type" id="inlineRadio1" value="common"> {% trans "Commun User" %}
               </label>
               <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">{% trans " Admin" %}
+                <input type="radio" name="user_type" id="inlineRadio2" value="admin">{% trans " Admin" %}
               </label>
             </div>
             <p1>{% trans "Access level:" %}</p1>
