--- a/SME_UnB/transductor/templates/transductor/detail.html
+++ b/SME_UnB/transductor/templates/transductor/detail.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends "users/dashboard.html" %}
 {% load i18n %}
 {% block title %}
   <title>{% trans "Measurements Record" %}</title>
 {% endblock %}
 
-{% block body %}
+{% block dashboard_content %}
   <div class="page-header">
     <div class="starter-template">
       <h1>{{transductor.description.title}}</h1>
