--- a/SME_UnB/transductor/templates/transductor/model_index.html
+++ b/SME_UnB/transductor/templates/transductor/model_index.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends "users/dashboard.html" %}
 {% load i18n %}
 {% block title %}
     <title>{% trans "Transductors Models" %}</title>
 {% endblock %}
 
-{% block body %}
+{% block dashboard_content %}
 <div class="col-md-6">
   <table class="table table-striped">
     {% if transductors_models %}
