--- a/SME_UnB/transductor/templates/transductor/new.html
+++ b/SME_UnB/transductor/templates/transductor/new.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends "users/dashboard.html" %}
 {% load i18n %}
 {% block title %}
     <title>{% trans "New Transductor" %}</title>
 {% endblock %}
 
-{% block body %}
+{% block dashboard_content %}
     <h1>{% trans "New Transductor" %}</h1>
 
     {% if errors %}
