--- a/SME_UnB/templates/languages.html
+++ b/SME_UnB/templates/languages.html
@@ -2,9 +2,9 @@
 
 {% get_available_languages as LANGUAGES %}
 
-<div class="idiomas">
+<div class="idiomas" style = "    margin-top: 8px; margin-left: 8px;">
   <form action="/i18n/setlang/" method="post">{% csrf_token %}
-    <select name="language" onchange="submit()">
+    <select class = "form-control" name="language" onchange="submit()">
       <option> {% trans "Change Language" %}</option>
         {% for lang in LANGUAGES %}
       <option value="{{ lang.0 }}">{{ lang.1 }}</option>
