--- a/SME_UnB/users/templates/users/self_edit.html
+++ b/SME_UnB/users/templates/users/self_edit.html
@@ -45,7 +45,7 @@
               <input type="text" name= "email" value="{{user.email}}" class="form-control">
             </div>
             <input type="hidden" name="original_email" value="{{user.email}}">
-            <button type="submit" class="btn btn-success" >{% trans "Edit" %}</button>
+                    <button type="submit" class="btn btn-success" onclick="return confirm('Voce tem certeza que deseja editar ?')" >{% trans "Edit" %}</button>
             <a class="btn btn-primary" href="{% url 'users:dashboard' %}" role="button">{% trans "Cancel" %}</a>
           </form>
         </div>
