--- a/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
@@ -9,18 +9,18 @@
 <title>{% trans "SME - Esqueci a senha" %}</title>
 {% endblock %}
 {% block body %}
-<script type="text/javascript" src="{% static 'users/js/reset.js' %}"></script>
 
 <!-- Modal -->
-<div class="modal fade" id="erroremail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="confirmMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Email Errado</h4>
+        <h4 class="modal-title" id="myModalLabel">Esqueci a senha</h4>
       </div>
-      <div class="modal-body" id='modal-body'>
+      <div class="modal-body">
         <span id='message'></span>
+        <p id='validate'></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -29,18 +29,18 @@
   </div>
 </div>
 
+<script type="text/javascript" src="{% static 'retrieve_password/js/forgot.js' %}"></script>
 <div class="container">
-    <div id='content-form' class="col-md-4 col-md-offset-4">
+    <div class="col-md-4 col-md-offset-4">
 
         <form class="form-signin">
             {% csrf_token %}
-            <h2 id="tittle-confirm" class="form-signin-heading text-center">Recuperar a senha</h2>
-            <div id='form-group' class="form-group">
+            <h2 class="form-signin-heading text-center">Recuperar a senha</h2>
+            <div class="form-group">
                 <label for="email" class="sr-only">{% trans "Email address" %}</label>
                 <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </div>
-            <input type="hidden" name="token" value="{{token}}" id="token"> 
-            <button id='reset_btn' class="btn btn-lg btn-primary btn-block">{% trans "Log in" %}</button>
+            <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Log in" %}</button>
         </form>
     </div>
 </div>
