--- a/SME_UnB/users/templates/users/login.html
+++ b/SME_UnB/users/templates/users/login.html
@@ -23,7 +23,7 @@
           <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         </div>
         <div class="form-group">
-            <a href="{% url "users:forgot" %}">Esqueci a senha</a>
+            <a href="{% url "retrieve:forgot" %}">Esqueci a senha</a>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">{% trans "Log in" %}</button>
       </form>
