Improving retrieve_password funcionality

--- a/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
@@ -34,13 +34,13 @@
 
         <form class="form-signin">
             {% csrf_token %}
-            <h2 id="tittle-confirm" class="form-signin-heading text-center">Recuperar a senha</h2>
+            <h2 id="tittle-confirm" class="form-signin-heading text-center">Confirme o email</h2>
             <div id='form-group' class="form-group">
                 <label for="email" class="sr-only">{% trans "Email address" %}</label>
                 <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </div>
             <input type="hidden" name="token" value="{{token}}" id="token">
-            <button id='reset_btn' class="btn btn-lg btn-primary btn-block">{% trans "Log in" %}</button>
+            <button id='reset_btn' class="btn btn-lg btn-primary btn-block">{% trans "Alterar senha" %}</button>
         </form>
     </div>
 </div>
