--- a/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
@@ -4,6 +4,7 @@
 {% bootstrap_messages %}
 {% load i18n %}
 {% load staticfiles %}
+{%load static%}
 
 {% block title %}
 <title>{% trans "SME - Esqueci a senha" %}</title>
@@ -40,7 +41,8 @@
                 <label for="email" class="sr-only">{% trans "Email address" %}</label>
                 <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </div>
-            <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Log in" %}</button>
+            <img id="loading_img" src="{% static "retrieve_password/spin.gif" %}" alt="loading" hidden="true"/ >
+            <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Enviar Email" %}</button>
         </form>
     </div>
 </div>
