--- a/SME_UnB/report/templates/graphics/report.html
+++ b/SME_UnB/report/templates/graphics/report.html
@@ -13,7 +13,7 @@
   <h1 class='text-center'>{% trans "Report" %}</h1>
   <div class="row">
     <div class="col-md-2 col-md-offset-5">
-      <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' %}" target="_blank" role="button">{% trans "Generate PDF" %}&raquo;</a>
+      <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' transductor_id %}" target="_blank" role="button">{% trans "Generate PDF" %}&raquo;</a>
     </div>
   </div>
 </div>
@@ -87,7 +87,9 @@
               <td>{{voltage.min.2}}</td>
               <td>{{voltage.average.2}}</td>
           </tr>
+
       </table class ="table table-bordered">
+
     </div>
   </div>
 </div>
@@ -123,7 +125,9 @@
               <td>{{activePower.min.2}}</td>
               <td>{{activePower.average.2}}</td>
           </tr>
+
       </table class ="table table-bordered">
+
     </div>
   </div>
 </div>
@@ -159,6 +163,7 @@
               <td>{{reactivePower.min.2}}</td>
               <td>{{reactivePower.average.2}}</td>
           </tr>
+
       </table class ="table table-bordered">
     </div>
   </div>
@@ -195,7 +200,9 @@
               <td>{{apparentPower.min.2}}</td>
               <td>{{apparentPower.average.2}}</td>
           </tr>
+
       </table class ="table table-bordered">
+
     </div>
   </div>
 </div>
