--- a/SME_UnB/report/templates/graphics/chart.html
+++ b/SME_UnB/report/templates/graphics/chart.html
@@ -4,7 +4,18 @@
 {% load static %}
 
 {% block dashboard_content %}
-    <h1>oi</h1>
+  <select class="form-control" id="selectTransductor">
+    <option value="" selected="true"> {% trans "Select a Transductor" %} </option>
+    {% for transductor in all_transductors %}
+    <option value="{{transductor.id}}">
+      {{transductor.description}}
+    </option>
+    {% endfor %}
+  </select>
+  <button type="button" id="select_transductor_btn">{% trans "Select" %}</button>
+  <button type="button" id="current_chart">Current Chart</button>
+  
+  <div id="curve_chart" style="width: 900px; height: 500px"></div>
 
-    <script src="{% static 'js/chart.js' %}"></script>
+<script src="{% static 'js/chart.js' %}"></script>
 {% endblock %}
