--- a/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
@@ -10,6 +10,7 @@
 <title>{% trans "SME - Esqueci a senha" %}</title>
 {% endblock %}
 {% block body %}
+<script type="text/javascript" src="{% static 'retrieve_password/js/forgot.js' %}"></script>
 
 <!-- Modal -->
 <div class="modal fade" id="confirmMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -30,20 +31,25 @@
   </div>
 </div>
 
-<script type="text/javascript" src="{% static 'retrieve_password/js/forgot.js' %}"></script>
 <div class="container">
-    <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 col-md-offset-4">
+    <form class="form-signin">
+      {% csrf_token %}
+      <h2 class="form-signin-heading text-center">Recuperar a senha</h2>
+      <div class="form-group">
+        <label for="email" class="sr-only">{% trans "Email address" %}</label>
+        <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
+        <p class="text-warning" id="error_msg" hidden="true" >* Email Inválido. Insira novamente</p>
+        <img id="loading_img" src="{% static "retrieve_password/spin.gif" %}" alt="loading" hidden="true"/ >
+      </div>
+      <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Enviar Email" %}</button>
+    </form>
 
-        <form class="form-signin">
-            {% csrf_token %}
-            <h2 class="form-signin-heading text-center">Recuperar a senha</h2>
-            <div class="form-group">
-                <label for="email" class="sr-only">{% trans "Email address" %}</label>
-                <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
-            </div>
-            <img id="loading_img" src="{% static "retrieve_password/spin.gif" %}" alt="loading" hidden="true"/ >
-            <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Enviar Email" %}</button>
-        </form>
+    <div class="panel panel-success" id="success_panel" hidden="true">
+      <div class="panel-heading"> Email enviado com sucesso </div>
+      <div class="panel-body">Entre no link enviado e cadastre uma nova senha. </div>
     </div>
+
+  </div>
 </div>
 {% endblock %}
