--- a/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="{% static 'retrieve_password/js/reset.js' %}"></script>
 
 <!-- Modal -->
-<div class="modal fade" id="erroremail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal" id="erroremail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -23,7 +23,7 @@
         <span id='message'></span>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" id="closeModal">Close</button>
       </div>
     </div>
   </div>
