fixing transductors perms and superuser attribute
Signed-off-by: CaioGabrielAraujo <caiohgabriel@gmail.com>
Signed-off-by: luis henrique <luishng123@gmail.com>

--- a/src/users/templates/users/edit_user.html
+++ b/src/users/templates/users/edit_user.html
@@ -34,13 +34,13 @@
             <p1>{% trans "User type:" %}</p1>
             <div class="form-group">
               <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> {% trans "Commun User" %}
+                <input type="radio" name="user_type" id="inlineRadio1" value="common"> {% trans "Commun User" %}
               </label>
               <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> {% trans "Administrator" %}
+                <input type="radio" name="user_type" id="inlineRadio2" value="admin">{% trans " Admin" %}
               </label>
             </div>
-            <p1>{% trans "Access level:" %}"</p1>
+            <p1>{% trans "Access level:" %}</p1>
             <div class="form-group">
               <div class="checkbox">
                 <label class="checkbox-inline checkbox-success">
