Debugging return on reset password incomplete

--- a/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/reset_password.html
@@ -31,7 +31,7 @@
 
 <div class="container">
     <div id='content-form' class="col-md-4 col-md-offset-4">
-
+      <div class="container" id="results"></div>
         <form class="form-signin">
             {% csrf_token %}
             <h2 id="tittle-confirm" class="form-signin-heading text-center">Confirme o email</h2>
