fixing report and users templates
Signed-off-by: CaioGabrielAraujo <caiohgabriel@gmail.com>
Signed-off-by: luis henrique <luishng123@gmail.com>

--- a/src/users/templates/users/dashboard.html
+++ b/src/users/templates/users/dashboard.html
@@ -10,7 +10,7 @@
       <li><a href="{% url 'report:transductors_filter' %}">{% trans "Reports" %}</a></li>
       {%endif%}
       <li><a href="{% url 'transductor:index'%}">{% trans "Transductors" %}</a></li>
-      <li><a href="{% url 'report:invoice' %}">{% trans "Invoice" %}</a></li>
+      <li><a href="{% url 'report:transductor_list' %}">{% trans "Invoice" %}</a></li>
       {% endblock %}
       {% if request.user.is_staff %}
       <li><a href="{% url 'users:register' %}">{% trans "Register" %}</a></li>
