--- a/src/report/templates/invoice/invoice.html
+++ b/src/report/templates/invoice/invoice.html
@@ -56,7 +56,7 @@
       <h1 class='text-center'>{% trans "Simular fatura" %}</h1>
       <div class="row">
         <div class="col-md-2 col-md-offset-5">
-          <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' 1 %}" target="_blank" role="button">{% trans "Gerar pdf" %}&raquo;</a>
+          <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' transductor_id %}" target="_blank" role="button">{% trans "Gerar pdf" %}&raquo;</a>
         </div>
       </div>
     </div>
