--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -42,6 +42,7 @@
       <p><strong>{% trans "Usuário" %}</strong>: {{ request.user.username}}</p>
       <p><strong>{% trans "E-mail" %}</strong>: {{ request.user.email }}</p>
       <a type="button"  class="btn btn-success" href="http://localhost:3000/accounts/self_edit/">Editar meus dados</a>
+        <a type="button"  class="btn btn-success" href="http://localhost:3000/accounts/change_password/">Editar minha senha</a>
       {% endblock %}
     </div>
   </div>
