--- a/SME_UnB/users/templates/users/change_password.html
+++ b/SME_UnB/users/templates/users/change_password.html
@@ -21,10 +21,10 @@
             <p2>{{falha}}</p2>
             {% csrf_token %}
 
-            <div class="form-group">
+            <!-- <div class="form-group">
               <p1>{% trans "Current Password :" %}</p1>
               <input type="password" name ="currentPassword" placeholder="current Password" class="form-control">
-            </div>
+            </div> -->
             <div class="form-group">
               <p1>{% trans "New Password:" %}</p1>
               <input type="password" name ="password" placeholder="Password" class="form-control">
@@ -34,7 +34,7 @@
               <input type="password" name ="confirmPassword" placeholder="confirm password" class="form-control">
             </div>
                 <input type="hidden" name="original_email" value="{{user.email}}">
-                    <button type="submit" class="btn btn-success" onclick="return confirm('Voce tem certeza que deseja editar sua sena ?')" >{% trans "Edit" %}</button>
+                    <button type="submit" class="btn btn-success" onclick="return confirm('Voce tem certeza que deseja editar sua senha ?')" >{% trans "Edit" %}</button>
             <a class="btn btn-primary" href="{% url 'users:dashboard' %}" role="button">{% trans "Cancel" %}</a>
           </form>
         </div>
