--- a/src/retrieve_password/templates/retrieve_password/reset_password.html
+++ b/src/retrieve_password/templates/retrieve_password/reset_password.html
@@ -6,7 +6,7 @@
 {% load staticfiles %}
 
 {% block title %}
-<title>{% trans "SME - Esqueci a senha" %}</title>
+<title>{% trans "SME -Forgot Password" %}</title>
 {% endblock %}
 {% block body %}
 <script type="text/javascript" src="{% static 'retrieve_password/js/reset.js' %}"></script>
@@ -17,13 +17,13 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Email Errado</h4>
+        <h4 class="modal-title" id="myModalLabel">{% trans " Wrong Email"%}</h4>
       </div>
       <div class="modal-body" id='modal-body'>
         <span id='message'></span>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" id="closeModal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" id="closeModal">{% trans "Close"%}</button>
       </div>
     </div>
   </div>
@@ -34,13 +34,13 @@
       <div class="container" id="results"></div>
         <form class="form-signin">
             {% csrf_token %}
-            <h2 id="tittle-confirm" class="form-signin-heading text-center">Confirme o email</h2>
+            <h2 id="tittle-confirm" class="form-signin-heading text-center">{% trans "Confirm Email"%}</h2>
             <div id='form-group' class="form-group">
                 <label for="email" class="sr-only">{% trans "Email address" %}</label>
                 <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </div>
             <input type="hidden" name="token" value="{{token}}" id="token">
-            <button id='reset_btn' class="btn btn-lg btn-primary btn-block">{% trans "Alterar senha" %}</button>
+            <button id='reset_btn' class="btn btn-lg btn-primary btn-block">{% trans "Change Password" %}</button>
         </form>
     </div>
 </div>
