--- a/src/report/templates/graphics/report.html
+++ b/src/report/templates/graphics/report.html
@@ -26,25 +26,25 @@
       <img src="{% static 'currentGraphic' %}{{transductor_id}}.png"/>
       <table class ="table table-bordered">
           <tr>
-              <th>Phase</th>
-              <th>Max. value</th>
-              <th>Min. Value</th>
-              <th>Average Value</th>
+              <th>{% trans "Phase"%}</th>
+              <th>{% trans "Max. value"%}</th>
+              <th>{% trans "Min. Value"%}</th>
+              <th>{% trans "Average Value"%}</th>
           </tr>
           <tr>
-              <td>Phase 1</td>
+              <td>{% trans "Phase 1"%}</td>
               <td>{{Current.max.0}}</td>
               <td>{{Current.min.0}}</td>
               <td>{{Current.average.0}}</td>
           </tr>
           <tr>
-              <td>Phase 2</td>
+              <td>{% trans "Phase 2"%}</td>
               <td>{{Current.max.1}}</td>
               <td>{{Current.min.1}}</td>
               <td>{{Current.average.1}}</td>
           </tr>
           <tr>
-              <td>Phase 3</td>
+              <td>{% trans "Phase 3"%}</td>
               <td>{{Current.max.2}}</td>
               <td>{{Current.min.2}}</td>
               <td>{{Current.average.2}}</td>
@@ -64,25 +64,25 @@
       <img src="{% static  'voltageGraphic' %}{{transductor_id}}.png"/>
       <table class ="table table-bordered">
           <tr>
-              <th>Phase</th>
-              <th>Max. value</th>
-              <th>Min. Value</th>
-              <th>Average Value</th>
+            <th>{% trans "Phase"%}</th>
+            <th>{% trans "Max. value"%}</th>
+            <th>{% trans "Min. Value"%}</th>
+            <th>{% trans "Average Value"%}</th>
           </tr>
           <tr>
-              <td>Phase 1</td>
+              <td>{% trans "Phase 1"%}</td>
               <td>{{voltage.max.0}}</td>
               <td>{{voltage.min.0}}</td>
               <td>{{voltage.average.0}}</td>
           </tr>
           <tr>
-              <td>Phase 2</td>
+              <td>{% trans "Phase 2"%}</td>
               <td>{{voltage.max.1}}</td>
               <td>{{voltage.min.1}}</td>
               <td>{{voltage.average.1}}</td>
           </tr>
           <tr>
-              <td>Phase 3</td>
+              <td>{% trans "Phase 3"%}</td>
               <td>{{voltage.max.2}}</td>
               <td>{{voltage.min.2}}</td>
               <td>{{voltage.average.2}}</td>
@@ -102,25 +102,25 @@
       <img src="{% static  'activePowerGraphic' %}{{transductor_id}}.png"/>
       <table class ="table table-bordered">
           <tr>
-              <th>Phase</th>
-              <th>Max. value</th>
-              <th>Min. Value</th>
-              <th>Average Value</th>
+            <th>{% trans "Phase"%}</th>
+            <th>{% trans "Max. value"%}</th>
+            <th>{% trans "Min. Value"%}</th>
+            <th>{% trans "Average Value"%}</th>
           </tr>
           <tr>
-              <td>Phase 1</td>
+              <td>{% trans "Phase 1"%}</td>
               <td>{{activePower.max.0}}</td>
               <td>{{activePower.min.0}}</td>
               <td>{{activePower.average.0}}</td>
           </tr>
           <tr>
-              <td>Phase 2</td>
+              <td>{% trans "Phase 2"%}</td>
               <td>{{activePower.max.1}}</td>
               <td>{{activePower.min.1}}</td>
               <td>{{activePower.average.1}}</td>
           </tr>
           <tr>
-              <td>Phase 3</td>
+              <td>{% trans "Phase 3"%}</td>
               <td>{{activePower.max.2}}</td>
               <td>{{activePower.min.2}}</td>
               <td>{{activePower.average.2}}</td>
@@ -140,25 +140,25 @@
       <img src="{% static  'reactivePowerGraphic' %}{{transductor_id}}.png"/>
       <table class ="table table-bordered">
           <tr>
-              <th>Phase</th>
-              <th>Max. value</th>
-              <th>Min. Value</th>
-              <th>Average Value</th>
+            <th>{% trans "Phase"%}</th>
+            <th>{% trans "Max. value"%}</th>
+            <th>{% trans "Min. Value"%}</th>
+            <th>{% trans "Average Value"%}</th>
           </tr>
           <tr>
-              <td>Phase 1</td>
+              <td>{% trans "Phase 1"%}</td>
               <td>{{reactivePower.max.0}}</td>
               <td>{{reactivePower.min.0}}</td>
               <td>{{reactivePower.average.0}}</td>
           </tr>
           <tr>
-              <td>Phase 2</td>
+              <td>{% trans "Phase 2"%}</td>
               <td>{{reactivePower.max.1}}</td>
               <td>{{reactivePower.min.1}}</td>
               <td>{{reactivePower.average.1}}</td>
           </tr>
           <tr>
-              <td>Phase 3</td>
+              <td>{% trans "Phase 3"%}</td>
               <td>{{reactivePower.max.2}}</td>
               <td>{{reactivePower.min.2}}</td>
               <td>{{reactivePower.average.2}}</td>
@@ -177,25 +177,25 @@
       <img src="{% static 'apparentPowerGraphic' %}{{transductor_id}}.png"/>
       <table class ="table table-bordered">
           <tr>
-              <th>Phase</th>
-              <th>Max. value</th>
-              <th>Min. Value</th>
-              <th>Average Value</th>
+            <th>{% trans "Phase"%}</th>
+            <th>{% trans "Max. value"%}</th>
+            <th>{% trans "Min. Value"%}</th>
+            <th>{% trans "Average Value"%}</th>
           </tr>
           <tr>
-              <td>Phase 1</td>
+              <td>{% trans "Phase 1"%}</td>
               <td>{{apparentPower.max.0}}</td>
               <td>{{apparentPower.min.0}}</td>
               <td>{{apparentPower.average.0}}</td>
           </tr>
           <tr>
-              <td>Phase 2</td>
+              <td>{% trans "Phase 2"%}</td>
               <td>{{apparentPower.max.1}}</td>
               <td>{{apparentPower.min.1}}</td>
               <td>{{apparentPower.average.1}}</td>
           </tr>
           <tr>
-              <td>Phase 3</td>
+              <td>{% trans "Phase 3"%}</td>
               <td>{{apparentPower.max.2}}</td>
               <td>{{apparentPower.min.2}}</td>
               <td>{{apparentPower.average.2}}</td>
