--- a/src/transductor/templates/transductor/detail.html
+++ b/src/transductor/templates/transductor/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  <title>Measurements Record</title>
+  <title>{% trans "Measurements Record "%}</title>
 {% endblock %}
 
 {% block body %}
@@ -22,9 +22,9 @@
       <thead>
         <tr>
           <th></th>
-          <th>Phase A</th>
-          <th>Phase B</th>
-          <th>Phase C</th>
+          <th>{% trans "Phase A"%}</th>
+          <th>{% trans "Phase B"%}</th>
+          <th>{% trans "Phase C"%}</th>
           <th>Total</th>
         </tr>
       </thead>
@@ -69,7 +69,7 @@
     <div class="pagination">
       <span class="step-links">
         {% if measurement_list.has_previous %}
-          <a href="?page={{ measurement_list.previous_page_number }}">previous</a>
+          <a href="?page={{ measurement_list.previous_page_number }}">{% trans "Previus" %}</a>
         {% endif %}
 
         <span class="current">
@@ -77,7 +77,7 @@
         </span>
 
         {% if measurement_list.has_next %}
-          <a href="?page={{ measurement_list.next_page_number }}">next</a>
+          <a href="?page={{ measurement_list.next_page_number }}">{% trans "Next" %}</a>
         {% endif %}
       </span>
     </div>
@@ -85,7 +85,7 @@
 {% else %}
   <div class="container">
     <div class="starter-template">
-      <h1>No measurement avaiable</h1>
+      <h1>{% trans "No measurement avaiable"%}</h1>
     </div>
   </div>
 {% endif %}
