--- a/src/users/templates/users/edit_user.html
+++ b/src/users/templates/users/edit_user.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
 
-          <h1>Edit user</h1>
+          <h1>{% trans "Edit user "%}</h1>
 
           <div class="confirmation">
             <p2>{{info}}</p2>
