fixing some issues on report

--- a/src/report/templates/graphics/report.html
+++ b/src/report/templates/graphics/report.html
@@ -13,7 +13,7 @@
   <h1 class='text-center'>{% trans "Report" %}</h1>
   <div class="row">
     <div class="col-md-2 col-md-offset-5">
-      <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' %}" target="_blank" role="button">{% trans "Generate PDF" %}&raquo;</a>
+      <a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' transductor_id %}" target="_blank" role="button">{% trans "Generate PDF" %}&raquo;</a>
     </div>
   </div>
 </div>
