Refactoring layout of system Sidebar

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,9 +11,8 @@
     <script src="https://js.pusher.com/3.2/pusher.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="{% static 'users/js/pusher.js'%}"></script>
-
-
+    <script type="text/javascript" src="{% static 'users/js/pusher.js' %}"></script>
+    <script type="text/javascript" src="{% static 'users/js/sidebar.js' %}"></script>
 </head>
 
 <body>
