--- a/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
+++ b/SME_UnB/retrieve_password/templates/retrieve_password/forgot_password.html
@@ -7,7 +7,7 @@
 {%load static%}
 
 {% block title %}
-<title>{% trans "SME - Esqueci a senha" %}</title>
+<title>{% trans "SME - Forgot my password" %}</title>
 {% endblock %}
 {% block body %}
 <script type="text/javascript" src="{% static 'retrieve_password/js/forgot.js' %}"></script>
@@ -18,14 +18,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Esqueci a senha</h4>
+        <h4 class="modal-title" id="myModalLabel">{% trans "Forgot my password" %}</h4>
       </div>
       <div class="modal-body">
         <span id='message'></span>
         <p id='validate'></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
       </div>
     </div>
   </div>
@@ -35,19 +35,19 @@
   <div class="col-md-4 col-md-offset-4">
     <form class="form-signin">
       {% csrf_token %}
-      <h2 class="form-signin-heading text-center">Recuperar a senha</h2>
+      <h2 class="form-signin-heading text-center">{% trans "Recover Password" %}</h2>
       <div class="form-group">
         <label for="email" class="sr-only">{% trans "Email address" %}</label>
         <input type="user" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
-        <p class="text-warning" id="error_msg" hidden="true" >* Email Inválido. Insira novamente</p>
+        <p class="text-warning" id="error_msg" hidden="true" >* {% trans "Invalid Email. Insert it again" %}</p>
         <img id="loading_img" src="{% static "retrieve_password/spin.gif" %}" alt="loading" hidden="true"/ >
       </div>
-      <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Enviar Email" %}</button>
+      <button id='forgot_btn' class="btn btn-lg btn-primary btn-block">{% trans "Send Email" %}</button>
     </form>
 
     <div class="panel panel-success" id="success_panel" hidden="true">
-      <div class="panel-heading"> Email enviado com sucesso </div>
-      <div class="panel-body">Entre no link enviado e cadastre uma nova senha. </div>
+      <div class="panel-heading"> {% trans "Email sended with success" %} </div>
+      <div class="panel-body">{% trans "Enter with the link sended in your email and register a new password" %}. </div>
     </div>
 
   </div>
