--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
   <div class="container">
       <h1>{% trans "Welcome!" %}</h1>
     <p>{% trans "SME - UnB is a web platform to monitor measurements from energy transductors." %}</p>
-      <p><a class="btn btn-primary btn-lg" href="https://gitlab.com/brenddongontijo/SME-UnB" role="button">{%"Learn more"%} &raquo;</a></p>
+      <p><a class="btn btn-primary btn-lg" href="https://gitlab.com/brenddongontijo/SME-UnB" role="button">{% trans "Learn more"%} &raquo;</a></p>
   </div>
 </div>
 {% endblock %}
